# meigen-api-rust

./: Cargo.toml  README.md  api_spec.yml  docker-compose.yml
migrations/: initialization.sql
src/: db.rs  dbconfig.rs  handlers.rs  main.rs  models.rs  routes.rs
