[package]
name = "meigen-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.8.0"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4"
ulid = "1.0.0"
