[package]
name = "meigen-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.8.0"
dotenv = "0.15.0"
chrono = "0.4"
uuid = { version = "1.4.1", features = ["v4", "serde", "fast-rng", "macro-diagnostics"]}
pwhash = "1.0.0"
derive_more = "0.99.16"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
config = "0.13.1"
